--- a/ServiceAPI/ServiceAPI.csproj
+++ b/ServiceAPI/ServiceAPI.csproj
@@ -243,10 +243,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="BLL\PersonelBLL.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PersonelController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DataSources\C_TITLE.cs">
       <DependentUpon>PersonelOracleModel.tt</DependentUpon>
     </Compile>
@@ -281,6 +279,8 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Repositories\PersonelOracleRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
+    <Compile Include="Security\ApiSecurity.cs" />
+    <Compile Include="Security\BasicAuthenticationAttribute.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
