--- a/ServiceAPI.Tests/ServiceAPI.Tests.csproj
+++ b/ServiceAPI.Tests/ServiceAPI.Tests.csproj
@@ -109,6 +109,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\FacultyControllerTest.cs" />
     <Compile Include="Controllers\PersonelControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
