--- a/ServiceAPI/ServiceAPI.csproj
+++ b/ServiceAPI/ServiceAPI.csproj
@@ -242,9 +242,14 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="BLL\FacultyBLL.cs" />
     <Compile Include="BLL\PersonelBLL.cs" />
+    <Compile Include="Controllers\FacultyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PersonelController.cs" />
+    <Compile Include="DataSources\C_FACULTY.cs">
+      <DependentUpon>PersonelOracleModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataSources\C_TITLE.cs">
       <DependentUpon>PersonelOracleModel.tt</DependentUpon>
     </Compile>
@@ -269,14 +274,18 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IFacultyBLL.cs" />
+    <Compile Include="Interfaces\IFacultyRepository.cs" />
     <Compile Include="Interfaces\IPersonelBLL.cs" />
     <Compile Include="Interfaces\IPersonelRepository.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\FacultyModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\PersonelModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
+    <Compile Include="Repositories\FacultyPersonelOracleRepository.cs" />
     <Compile Include="Repositories\PersonelOracleRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Security\ApiSecurity.cs" />
